# -agent

./: .coverage  .dockerignore  .env.example  .env.production.example  .env.test  .env.test.example  .gitignore  BUDGET_FILTERING_TEST_REPORT.md  CI_DEPLOYMENT_STATUS.md  CLAUDE.md  CODE_REVIEW_SECURITY.md  CRITICAL_ISSUE_RESOLVED.md  DASHBOARD_DEPLOYMENT_CHECKLIST.md  DASHBOARD_KPI_DEPLOYMENT_FILES_MANIFEST.txt  DASHBOARD_KPI_DEPLOYMENT_INDEX.md  DASHBOARD_KPI_DEPLOYMENT_QUICK_REFERENCE.md  DASHBOARD_KPI_DEPLOYMENT_READINESS_2026-05-01.md  DASHBOARD_KPI_DEPLOYMENT_TRACKER_2026-05-01.md  DASHBOARD_KPI_STAGING_DEPLOYMENT_2026-05-01.md  DASHBOARD_KPI_STAGING_DEPLOYMENT_PLAN.md  DASHBOARD_KPI_STAGING_DEPLOYMENT_SUMMARY.md  DASHBOARD_KPI_STATUS_2026-04-21.md  DASHBOARD_KPI_SUMMARY.md  DAY2_BOTTLENECK_ANALYSIS.md  DEBUG_PROPOSAL_CREATION.md  DEPLOYMENT-CHECKLIST-unified-state-system.md  DEPLOYMENT_ACTION_PLAN_2026-04-17.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CHECKLIST_2026-04-20.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_EXECUTION_LOG.txt  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_PLAN_DOCUMENT_INGESTION.md  DEPLOYMENT_READINESS_REPORT.md  DEPLOYMENT_READINESS_SUMMARY.md  DEPLOYMENT_READY_STATUS.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_SUMMARY.txt  DOCUMENT_INGESTION_ACT_PHASE_COMPLETE.md  (+199 more)
.bkit/: phase1_baseline_metrics.json
.playwright-mcp/: page-2026-04-06T11-55-57-023Z.yml  page-2026-04-06T11-56-32-421Z.yml  page-2026-04-06T12-30-36-821Z.yml  page-2026-04-06T12-38-59-030Z.yml  page-2026-04-06T12-44-31-383Z.yml  page-2026-04-07T01-27-31-423Z.yml  page-2026-04-07T10-33-34-467Z.yml  page-2026-04-07T10-34-27-903Z.yml  page-2026-04-10T10-30-52-215Z.yml
agents/: __init__.py  document_agent.py  quality_agent.py  rfp_analysis_agent.py  section_generation_agent.py  strategy_agent.py
app/: config.py  exceptions.py  main.py  scheduler.py  state_machine.py
config/: claude_optimizer.py
data/: bid_scored_cache.json  company_profile.json  seed_template.xlsx
database/: README.md  create_missing_tables.sql  migration_add_date_range.sql  rollback_migration_019.sql  schema.sql  schema_v3.4.sql  supabase_schema.sql
docs/: 001_db_migration_add_workflow_tracking.sql  DASHBOARD_PERMISSION_TESTS.md  DATABASE_VAULT_SETUP.md  HARNESS_ENGINEERING_IMPLEMENTATION.md  INTRANET_ARCHIVE_INTEGRATION_DESIGN.md  INTRANET_STORAGE_REDESIGN.md  PHASE_CONTEXT_MANAGEMENT_v3.1.1.md  PILOT_MIGRATION_GUIDE.md  SUPABASE_SETUP.md  TEAMS_BOT_INTEGRATION.md  VAULT_E2E_TESTING_GUIDE.md  VAULT_PHASE1_WEEK2_COMPLETION_SUMMARY.md  VAULT_VECTOR_SEARCH.md  step2-positioning-strategy-deep-dive.md  test-checklist-frontend.md
fixes/: fix_test_failures_t2_1_authorization.py  fix_test_failures_t2_2_budget_filtering.py  fix_test_failures_t2_3_status_machine.py  fix_test_failures_t2_4_test_data.py
frontend/: .env.local.example  .eslintrc.json  COMPONENT_USAGE.md  MIGRATION_EXAMPLE.tsx  OPTIMIZATION_SUMMARY.md  PHASE4_COMPLETION_SUMMARY.md  PREVIEW_DASHBOARD.html  PREVIEW_GUIDE.md  PREVIEW_KB_SEARCH.html  PREVIEW_PROPOSALS_LIST.html  PREVIEW_PROPOSALS_TABLE.html  PREVIEW_PROPOSAL_EDITOR.html  REFACTORING_CHECKLIST.md  SIDEBAR_MENU_STRUCTURE.md  SIDEBAR_STRUCTURE.md  SIDEBAR_VISUAL_GUIDE.md  SPACING_AND_SHADOWS.md  STEP8_INTEGRATION.md  UI_IMPROVEMENT_COMPLETION.md  UI_UX_DESIGN_REVIEW.md  WORKFLOW_DESIGN_SPEC.md  deployment-checklist.md  e2e-test-output.txt  lint_final.txt  lint_full_output.txt  lint_output.txt  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  run-e2e-tests.js  run-load-tests.js  run-smoke-tests.js  run-tests.bat  run-tests.js  tailwind.config.ts  test-results.txt  tsconfig.tsbuildinfo
graph/: __init__.py  hitl_gates.py  integrated_supervisor.py  mock_data.py  phase_nodes.py  phased_supervisor.py  supervisor.py
mindvault-out/: .mindvault_hashes.json  GRAPH_REPORT.md
monitoring/: alertmanager.yml  prometheus-alerts.yml  prometheus.yml
prompts/: __init__.py  supervisor.py
scripts/: add_missing_columns.py  apply_document_ingestion_migration.py  apply_migrations.py  bid_scoring.py  check_bid_status.py  check_columns.py  check_data.py  check_schema.py  cleanup_proposals.py  (+59 more)
(+1977 files in other folders)
