[project]
name = "proposal-agent"
version = "0.3.0"
description = "LangGraph Multi-Agent 기반 용역 제안서 자동 생성 AI 에이전트"
requires-python = ">=3.11"
dependencies = [
    # Core LangGraph & LangChain
    "langgraph>=0.2.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-anthropic>=0.2.0",
    # FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Anthropic Claude API
    "anthropic>=0.40.0",
    # Utilities
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # Document processing
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    # Optional: Vector DB support
    "chromadb>=0.5.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
